# testql

./: .gitignore  C2004_VISUAL_TESTING.md  CHANGELOG.md  DSL.md  Makefile  README.md  REFACTORING_PLAN.md  SUMD.md  SUMR.md  TODO.md  Taskfile.testql.yml  Taskfile.yml  app.doql.css  app.doql.less  app.doql.sass  coverage.json  debug_makefile.py  goal.yaml  local.dev.txt  openapi.yaml  planfile.yaml  project.sh  pyproject.toml  pyqual.yaml  sumd.json  test_autoloop_api.py  test_autoloop_mcp.py  test_manifest_and_generators.py  topology.toon  tree.txt
.aider/: Dockerfile  docker-compose.yml
.aider/prompts/: testql-autoloop.md
.code2llm_cache/: __init___1781013602823150326_352.pkl  coverage_1781013602169563149_1199905.pkl  pyproject_1781013602807316613_2968.pkl  tree_1781011807222760321_60437.pkl  vdisplay_capture_1781013306259717127_20690.pkl  window_discovery_1781013294941633772_4318.pkl
.github/workflows/: ci.yml
.testql/: autoloop-state.json  inspection.json  inspection.toon.yaml  inspection.yaml  metadata.json  refactor-plan.json  refactor-plan.toon.yaml  refactor-plan.yaml  result.json  result.toon.yaml  result.yaml  summary.md  topology.json  topology.toon.yaml  topology.yaml
.testql/reports/: iteration.json  llm-decision.json  (+2 more)
.windsurf/: mcp_config.json
TODO/: backend-diagnostic.testtoon  pss7000-full-flow.testtoon  testql-table-format-spec.md  testtoon_parser.py
articles/: testql-multi-dsl-refactor-plan.md  testql-phase-6-artifact-discovery.md  testql-plugins-and-formats.md
code2llm_output/: README.md  analysis.toon.yaml  calls.mmd  calls.yaml  compact_flow.mmd  context.md  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt
docs/: CONFIG_SOURCE_GENERATION.md  DESKTOP_GUI_E2E.md  MANIFEST_TESTING_AND_REFACTOR_FLOW.md  README.md  TESTQL_AUTOLOOP_ONBOARDING.md  USAGE.md  conversation-refactor-plan.toon.yaml  testql-spec.md
examples/: .gitignore  Makefile  README.md  run-all.sh
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
scenarios/: c2004-all-modules-api.testql.toon.yaml  encoder-cli-hardware-sim.testql.toon.yaml  encoder-connect-test-devices-admin-pl.testql.toon.yaml  encoder-gui-full-flow.testql.toon.yaml  encoder-gui-terminal.testql.toon.yaml  encoder-navigation.testql.toon.yaml  encoder-terminal-cli.testql.toon.yaml
scripts/: install_testql_autoloop.sh  setup_mcp_windsurf.sh  smoke_manifest_flow.sh
testql/: __init__.py  __main__.py  _base_fallback.py  assertion_suite.py  base.py  cli.py  doql_parser.py  echo_schemas.py  endpoint_detector.py  generator.py  interpreter.py  openapi_generator.py  pipeline.py  report_generator.py  runner.py  sumd_generator.py  sumd_parser.py  toon_parser.py  verification.py
testql-scenarios/: generated-api-smoke.testql.toon.yaml  generated-asset-assert.testql.toon.yaml  generated-cli-extended.testql.toon.yaml  generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml  generated-sitemap-assert.testql.toon.yaml
tests/: conftest.py  test_adapter_capture_syntax.py  test_adapters_base.py  test_api_handler.py  test_assertion_suite.py  test_browser_discovery.py  test_cc_refactor_helpers.py  test_cli.py  test_cli_no_block.py  test_conversation_live_llm.py  test_conversation_nlp2dsl.py  test_converter.py  test_converter_handlers.py  test_desktop_assert_elements.py  test_desktop_backend.py  test_desktop_catalog.py  test_desktop_execution.py  test_desktop_vision.py  test_detectors.py  test_discovery.py  test_dispatcher.py  test_doql_parser_sumd_gen.py  test_echo.py  test_echo_doql_parser.py  test_echo_schemas_helpers.py  test_element_assert.py  test_encoder_routes.py  test_environment_regressions.py  test_generate_cmd.py  test_generate_from_page_cli.py  test_generate_ir_cli.py  test_generators.py  test_graphql_adapter.py  test_gui_execution.py  test_gui_performance.py  test_interpreter.py  test_ir.py  test_ir_captures.py  test_ir_runner_assertion_eval.py  test_ir_runner_captures.py  (+60 more)
(+601 files in other folders)
