[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testql"
version = "1.2.17"
description = "TestQL — Multi-DSL Test Platform: TestTOON / NL / SQL / Proto / GraphQL adapters with Unified IR, generator engine, and meta-testing"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
    "websockets>=13.0",
    "pytest-cov>=7.0",
    "fastapi>=0.100",
]

[project.scripts]
testql = "testql.cli:main"

[project.entry-points."testql.plugins"]
# Third-party packages can ship adapters by registering an entry point in
# this group. The loaded module may expose either:
#   - a `register_testql_plugin(registry)` callable, or
#   - an `adapter` / `adapters` attribute with `BaseDSLAdapter` instance(s).

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
sql = ["sqlglot>=20.0"]
proto = ["protobuf>=4.21"]
graphql = ["graphql-core>=3.2"]
dev = ["pytest", "pytest-asyncio", "pytest-cov",
    "fastapi",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
    "sqlglot>=20.0",
    "protobuf>=4.21",
    "graphql-core>=3.2",
]

[tool.setuptools.packages.find]
include = ["testql*"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"

[tool.pytest.ini_options]
addopts = "--cov=testql --cov-report=term-missing --cov-report=json"
testpaths = ["tests"]

auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
